# demrec

./: Cargo.toml  Dioxus.toml
.github/workflows/: deploy.yml
assets/: main.css
src/: main.rs
