[package]
name = "demrec"
version = "0.1.0"
authors = ["Marcus Ewert <marcus@scanner.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.6"
web-sys = { version = "0.3", features = ["Window", "Navigator", "MediaDevices", "MediaStreamConstraints", "MediaStream", "HtmlVideoElement", "Element", "Document", "MediaStreamTrack"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
